Fix production URL.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://blog-c94.pages.dev/'
+baseURL = 'https://dontfear.tech/'
 languageCode = 'en-us'
 title = "Don't Fear Tech"
 theme = "risotto"
